--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                     <br>
                     <a href="" class="button-banner">See Recipes</a>
                 </h1>
-
             </div>
         </div>
 
@@ -53,7 +52,6 @@
                     <p class="para1">Bake, shake, and stir some uptimism into your day.</p>
                     <br>
                     <a href="" class="button-banner">View Recipes</a>
-
                 </div>
             </div>
 
@@ -66,7 +64,7 @@
                     <br>
                     <p class="para1">Find your favorite flavors of uptimism and keep your glass half-full.</p>
                     <br>
-                    <button href="" class="button-banner">Find Products</a>
+                    <a href="" class="button-banner">Find Products</a>
                 </div>
             </div>
         </div>
@@ -75,7 +73,7 @@
            <table>
             <thead>
                 <tr>
-                    <th><a href="" >Privacy Policy</a</th>
+                    <th><a href="" >Privacy Policy</a></th>
                     <th><a href="" >CA Privacy Rights</a></th>
                     <th><a href="" >Do Not Sell or Share My Personal Information</a></th>
                     <th><a href="" >Terms of Use</a></th>
